--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A simple task tracker in terminal",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MonisMS/task-tracker-cli.git"
@@ -20,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/MonisMS/task-tracker-cli/issues"
   },
-  "homepage": "https://github.com/MonisMS/task-tracker-cli#readme"
+  "homepage": "https://github.com/MonisMS/task-tracker-cli#readme",
+  "dependencies": {
+    "chalk": "^5.4.1"
+  }
 }
